--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="controls">
       <select id="theme-select">
-        <option value="random">🎲 Random</option>
+        <option value="random">🎲 Rando</option>
         <option value="vintage">🎞 Vintage</option>
         <option value="modern">⚡ Modern</option>
         <option value="pastel">🌈 Pastel</option>
